--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "eject": "expo eject"
     },
     "dependencies": {
+        "@react-native-async-storage/async-storage": "^1.15.5",
         "@react-native-community/masked-view": "0.1.10",
         "@react-navigation/bottom-tabs": "^5.11.8",
         "@react-navigation/drawer": "^5.12.4",
@@ -31,7 +32,13 @@
     },
     "devDependencies": {
         "@babel/core": "~7.9.0",
-        "babel-loader": "^8.2.2"
+        "babel-loader": "^8.2.2",
+        "eslint": "^7.30.0",
+        "eslint-config-airbnb": "^18.2.1",
+        "eslint-plugin-import": "^2.23.4",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-react": "^7.24.0",
+        "eslint-plugin-react-hooks": "^4.2.0"
     },
     "private": true
 }
