--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "WillowsCafeApp",
+    "name": "Willows Cafe",
     "slug": "WillowsCafeApp",
     "version": "1.0.0",
     "orientation": "portrait",
