--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react": "16.13.1",
         "react-dom": "16.13.1",
         "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+        "react-native-elements": "^3.4.2",
         "react-native-gesture-handler": "~1.8.0",
         "react-native-qrcode-image": "^0.2.8",
         "react-native-qrcode-svg": "^6.1.1",
